--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.o
 *.so
 target/
+bin/
 
 # Packages #
 ############
@@ -26,10 +27,17 @@ target/
 *.log
 *.sql
 *.sqlite
+db/
 
-# Config files       #
+# IDE Config files   #
 ######################
 nb-configuration.xml
+.project
+.settings/
+nbproject/
+*.iml
+.idea
+.classpath
 
 # OS generated files #
 ######################
@@ -40,10 +48,3 @@ nb-configuration.xml
 .Trashes
 ehthumbs.db
 Thumbs.db
-
-/.project
-/.settings/
-
-*.iml
-/.idea
-/modules/holodeckb2b-core/nbproject/
