--- a/modules/holodeckb2b-interfaces/pom.xml
+++ b/modules/holodeckb2b-interfaces/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>2.1.4-SNAPSHOT-3</version>
+        <version>2.1.4</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>holodeckb2b-interfaces</artifactId>
