Logging refactoring to have clear separation of detail on different levels

--- a/modules/holodeckb2b-common/src/test/resources/log4j.properties
+++ b/modules/holodeckb2b-common/src/test/resources/log4j.properties
@@ -45,4 +45,4 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%-5p %c - %m%n
 log4j.rootLogger=ERROR, CONSOLE
 
 # === Holodeck B2B classes
-log4j.org.holodeckb2b=DEBUG, CONSOLE
+log4j.org.holodeckb2b=WARN, CONSOLE
