--- a/modules/holodeckb2b-security/pom.xml
+++ b/modules/holodeckb2b-security/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>4.2.0-SNAPSHOT</version>
+        <version>5.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>holodeckb2b-security</artifactId>
@@ -121,9 +121,9 @@
                 </executions>
                 <configuration>
                     <sources>
-                        <source>src/main/resources/xsd/hb2b-security-cfg.xsd</source>
+                        <source>src/main/resources/xsd/hb2b-certmanager-cfg.xsd</source>
                     </sources>
-                    <packageName>org.holodeckb2b.security.config</packageName>
+                    <packageName>org.holodeckb2b.security.trust.config</packageName>
                 </configuration>
             </plugin>
         </plugins>
