--- a/modules/holodeckb2b-ebms3as4/pom.xml
+++ b/modules/holodeckb2b-ebms3as4/pom.xml
@@ -40,6 +40,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>holodeckb2b-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>hb2b-ebms3-secprovider</artifactId>
+            <version>${project.version}</version>            
+        </dependency>        
 
         <!-- Apache Axis2 kernel -->
         <dependency>
