--- a/modules/holodeckb2b-ui/pom.xml
+++ b/modules/holodeckb2b-ui/pom.xml
@@ -29,12 +29,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>holodeckb2b-security</artifactId>
+            <artifactId>holodeckb2b-certmanager</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>holodeckb2b-persistency</artifactId>
-        </dependency>
+        </dependency> 
         <dependency>
             <groupId>com.github.lgooddatepicker</groupId>
             <artifactId>LGoodDatePicker</artifactId>
