--- a/modules/holodeckb2b-distribution/pom.xml
+++ b/modules/holodeckb2b-distribution/pom.xml
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>org.holodeckb2b.extensions</groupId>
 			<artifactId>file-backend</artifactId>
-			<version>1.1.0-SNAPSHOT</version>
+			<version>1.1.0</version>
         </dependency>
         
         <!--===============================================================
