--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
     </organization>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>        
         <axis2-version>1.6.3</axis2-version>
         <axiom-version>1.2.14</axiom-version>
         <netbeans.hint.license>gpl30</netbeans.hint.license>
@@ -135,11 +137,18 @@
                 <version>${hibernate.version}</version>
                 <scope>runtime</scope>
             </dependency>
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-c3p0</artifactId>
+                <version>${hibernate.version}</version>
+                <scope>runtime</scope>
+            </dependency>
 
 
-             <!--===============================================================
-                XML Processing libraries
-            =============================================================== -->
+
+            <!--===============================================================
+               XML Processing libraries
+           =============================================================== -->
             <dependency>
                 <groupId>org.simpleframework</groupId>
                 <artifactId>simple-xml</artifactId>
