--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,11 @@
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>        
-        <axis2-version>1.6.3</axis2-version>
-        <axiom-version>1.2.14</axiom-version>
+        <maven.compiler.target>11</maven.compiler.target>
+        <axis2-version>1.6.4</axis2-version>
+        <axiom-version>1.2.15</axiom-version>
         <netbeans.hint.license>gpl30</netbeans.hint.license>
-        <hibernate.version>5.0.11.Final</hibernate.version>
+        <hibernate.version>5.3.23.Final</hibernate.version>
         <wss4j.version>2.0.4</wss4j.version>
         <xmlsec.version>2.0.4</xmlsec.version>
         <log4j.version>2.6.2</log4j.version>
@@ -143,8 +143,12 @@
                 <version>${hibernate.version}</version>
                 <scope>runtime</scope>
             </dependency>
-
-
+            <dependency>
+                <groupId>com.mchange</groupId>
+                <artifactId>c3p0</artifactId>
+                <version>0.9.5.5</version>
+                <scope>runtime</scope>
+            </dependency>
 
             <!--===============================================================
                XML Processing libraries
@@ -157,7 +161,7 @@
             <dependency>
                 <groupId>xerces</groupId>
                 <artifactId>xercesImpl</artifactId>
-                <version>2.10.0</version>
+                <version>2.11.0</version>
                 <scope>runtime</scope>
             </dependency>
             <dependency>
@@ -211,7 +215,7 @@
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk15on</artifactId>
-                <version>1.54</version>
+                <version>1.69</version>
             </dependency>
 
             <!--===============================================================
@@ -257,7 +261,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <version>4.13.2</version>
                 <scope>test</scope>
             </dependency>
 
