--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
             <dependency>
 				<groupId>org.holodeckb2b.commons</groupId>
 				<artifactId>generic-utils</artifactId>
-				<version>1.1.1</version>            
+				<version>1.2.0-SNAPSHOT-1</version>            
             </dependency>
 
             <!--===============================================================
