Documentation and dependency update

--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -33,7 +33,6 @@
 			<groupId>org.holodeckb2b.commons</groupId>
 			<artifactId>generic-utils</artifactId>
 		</dependency>
-		<!-- Apache Axis2 kernel -->
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-kernel</artifactId>
@@ -43,16 +42,19 @@
 			<artifactId>axis2-transport-http</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>javax.cache</groupId>
+			<artifactId>cache-api</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+			<version>3.10.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.simpleframework</groupId>
 			<artifactId>simple-xml</artifactId>
 		</dependency>
-
-		<!-- Apache Tika is used to determine MIME Type -->
-		<dependency>
-			<groupId>org.apache.tika</groupId>
-			<artifactId>tika-core</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
@@ -79,6 +81,13 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+			<groupId>org.holodeckb2b.commons</groupId>
+			<artifactId>generic-utils</artifactId>
+			<type>test-jar</type>
+			<scope>test</scope>            
+        </dependency>
+		
 		<!-- This specific log4j lib is used by mockito. @todo: We should check 
 			if we can skip this dependency -->
 		<dependency>
