--- a/modules/holodeckb2b-security/certmanager/pom.xml
+++ b/modules/holodeckb2b-security/certmanager/pom.xml
@@ -67,6 +67,22 @@
             </exclusions>
         </dependency>
 
+        <!-- Add JAXB for Java9 and later compatibilitu -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.istack</groupId>
+            <artifactId>istack-commons-runtime</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -96,7 +112,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>2.5.0</version>
                 <executions>
                     <execution>
                         <id>xjc</id>
