--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.holodeckb2b</groupId>
 		<artifactId>holodeckb2b</artifactId>
-		<version>6.0.0-SNAPSHOT-4</version>
+		<version>6.0.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
@@ -44,12 +44,18 @@
 		<dependency>
 			<groupId>javax.cache</groupId>
 			<artifactId>cache-api</artifactId>
-			<version>1.1.0</version>
+			<version>1.1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ehcache</groupId>
 			<artifactId>ehcache</artifactId>
-			<version>3.10.0</version>
+			<version>3.10.8</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.glassfish.jaxb</groupId>
+					<artifactId>jaxb-runtime</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.simpleframework</groupId>
