--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <groupId>org.holodeckb2b</groupId>
     <artifactId>holodeckb2b</artifactId>
     <packaging>pom</packaging>
-    <version>6.0.0-SNAPSHOT-4</version>
+    <version>6.0.0</version>
     <name>Holodeck B2B</name>
     <url>http://www.holodeck-b2b.org/</url>
     <inceptionYear>2015</inceptionYear>
@@ -87,7 +87,7 @@
         <axis2-version>1.7.7</axis2-version>
         <axiom-version>1.2.20</axiom-version>
         <netbeans.hint.license>gpl30</netbeans.hint.license>
-        <log4j.version>2.18.0</log4j.version>
+        <log4j.version>2.19.0</log4j.version>
     </properties>
 
     <modules>
@@ -96,10 +96,10 @@
         <module>modules/holodeckb2b-persistency</module>
         <module>modules/holodeckb2b-security</module>
         <module>modules/holodeckb2b-ebms3as4</module>
+        <module>modules/holodeckb2b-ui</module>
         <module>modules/holodeckb2b-distribution</module>
         <module>modules/holodeckb2b-it</module>
-        <module>modules/holodeckb2b-ui</module>
-  </modules>
+    </modules>
 
     <licenses>
         <license>
@@ -153,7 +153,7 @@
             <dependency>
 				<groupId>org.holodeckb2b.commons</groupId>
 				<artifactId>generic-utils</artifactId>
-				<version>1.2.0-SNAPSHOT-1</version>            
+				<version>1.2.0</version>            
             </dependency>
 
             <!--===============================================================
@@ -298,7 +298,7 @@
             <dependency>
 				<groupId>org.holodeckb2b.commons</groupId>
 				<artifactId>generic-utils</artifactId>
-				<version>1.2.0-SNAPSHOT-1</version>
+				<version>1.2.0</version>
 				<type>test-jar</type>
 				<scope>test</scope>            
             </dependency>
