--- a/modules/holodeckb2b-security/sec-provider/pom.xml
+++ b/modules/holodeckb2b-security/sec-provider/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b-security</artifactId>
-        <version>6.1.0</version>
+        <version>7.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>holodeckb2b-ebms3-secprovider</artifactId>
