--- a/modules/holodeckb2b-distribution/pom.xml
+++ b/modules/holodeckb2b-distribution/pom.xml
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>org.holodeckb2b.extensions</groupId>
 			<artifactId>file-backend</artifactId>
-			<version>1.3.0</version>
+			<version>2.0.0-SNAPSHOT</version>
         </dependency>
         
         <!--===============================================================
