--- a/modules/holodeckb2b-security/pom.xml
+++ b/modules/holodeckb2b-security/pom.xml
@@ -36,11 +36,36 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <wss4j.version>2.2.2</wss4j.version>
+        <wss4j.version>2.4.3</wss4j.version>
     </properties>
 
     <modules>
         <module>certmanager</module>
         <module>sec-provider</module>
     </modules>
+    
+    <dependencyManagement>
+		<dependencies>
+	        <dependency>
+	            <groupId>org.apache.wss4j</groupId>
+	            <artifactId>wss4j-ws-security-common</artifactId>
+	            <version>${wss4j.version}</version>
+	            <exclusions>
+	            	<exclusion>
+	            		<groupId>org.opensaml</groupId>
+	            		<artifactId>opensaml-saml-impl</artifactId>
+	            	</exclusion>
+	            	<exclusion>
+	            		<groupId>org.opensaml</groupId>
+	            		<artifactId>opensaml-xacml-impl</artifactId>
+	            	</exclusion>
+	            	<exclusion>
+	            		<groupId>org.opensaml</groupId>
+	            		<artifactId>opensaml-xacml-saml-impl</artifactId>
+	            	</exclusion>
+	            </exclusions>
+	        </dependency>
+	        
+        </dependencies>		
+	</dependencyManagement>
 </project>
