--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -84,9 +84,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>2.28.2</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency>		
         <dependency>
 			<groupId>org.holodeckb2b.commons</groupId>
 			<artifactId>generic-utils</artifactId>
