--- a/pom.xml
+++ b/pom.xml
@@ -279,8 +279,8 @@
 		    </dependency>
 			<dependency>
 				<groupId>org.mockito</groupId>
-				<artifactId>mockito-core</artifactId>
-				<version>5.7.0</version>
+				<artifactId>mockito-junit-jupiter</artifactId>
+				<version>2.28.2</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
