--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 
-		<hb2b-utils-version>1.3.0</hb2b-utils-version>
+		<hb2b-utils-version>1.4.0</hb2b-utils-version>
 		<axis2-version>1.8.2</axis2-version>
 		<axiom-version>1.4.0</axiom-version>
 		<netbeans.hint.license>gpl30</netbeans.hint.license>
@@ -103,10 +103,10 @@
 	<modules>
 		<module>modules/holodeckb2b-interfaces</module>
 		<module>modules/holodeckb2b-core</module>
-		<module>modules/holodeckb2b-persistency</module>
 		<module>modules/holodeckb2b-security</module>
 		<module>modules/holodeckb2b-ebms3as4</module>
 		<module>modules/holodeckb2b-ui</module>
+		<module>modules/holodeckb2b-persistency</module>
 		<module>modules/holodeckb2b-distribution</module>
 		<!--        <module>modules/holodeckb2b-it</module> -->
 	</modules>
@@ -277,12 +277,18 @@
 		        <version>5.7.2</version>
 		        <scope>test</scope>
 		    </dependency>
+	        <dependency>
+	            <groupId>com.sun.activation</groupId>
+	            <artifactId>jakarta.activation</artifactId>
+	            <version>1.2.1</version>
+	            <scope>test</scope>
+	        </dependency>		    
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-junit-jupiter</artifactId>
 				<version>2.28.2</version>
 				<scope>test</scope>
-			</dependency>
+			</dependency>		    
 			<dependency>
 				<groupId>org.holodeckb2b.commons</groupId>
 				<artifactId>generic-utils</artifactId>
