--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,13 @@
 				<version>2.28.2</version>
 				<scope>test</scope>
 			</dependency>		    
+	        <dependency>
+	            <groupId>${project.groupId}</groupId>
+	            <artifactId>holodeckb2b-core</artifactId>
+	            <version>${project.version}</version>
+	            <type>test-jar</type>
+	            <scope>test</scope>
+	        </dependency>
 			<dependency>
 				<groupId>org.holodeckb2b.commons</groupId>
 				<artifactId>generic-utils</artifactId>
