--- a/modules/holodeckb2b-security/pom.xml
+++ b/modules/holodeckb2b-security/pom.xml
@@ -52,6 +52,10 @@
 	            <version>${wss4j.version}</version>
 	            <exclusions>
 	            	<exclusion>
+	            		<groupId>jakarta.mail</groupId>
+	            		<artifactId>jakarta.mail-api</artifactId>
+	            	</exclusion>					
+	            	<exclusion>
 	            		<groupId>org.opensaml</groupId>
 	            		<artifactId>opensaml-saml-impl</artifactId>
 	            	</exclusion>
