--- a/modules/holodeckb2b-distribution/pom.xml
+++ b/modules/holodeckb2b-distribution/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>7.0.0-SNAPSHOT</version>
+        <version>7.0.0-RC1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>org.holodeckb2b.extensions</groupId>
 			<artifactId>file-backend</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>2.0.0</version>
         </dependency>
         
         <!--===============================================================
@@ -79,21 +79,35 @@
             modules
         =============================================================== -->
 
+		<!-- Axis2 use Commons logging, so add log4j binding -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-jcl</artifactId>
+            <scope>runtime</scope>
+			<version>${log4j.version}</version>
+		</dependency>
+		<!-- We also don't use SLF4J directly but it is used by libs like WSS4J. So we want to
+            bind this to log4j as well -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+            <scope>runtime</scope>
+			<version>${log4j.version}</version>
+		</dependency>
+		<!-- Same for the Java Logging framework which is used by Bouncy Castle -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
+            <artifactId>log4j-jul</artifactId>
             <scope>runtime</scope>
-        </dependency>
+            <version>${log4j.version}</version>
+        </dependency>        
+        
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-jcl</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+		    <groupId>com.sun.activation</groupId>
+		    <artifactId>jakarta.activation</artifactId>
+		    <version>1.2.2</version>
+		    <scope>runtime</scope>
+		</dependency>
     </dependencies>
 
     <build>
