--- a/modules/holodeckb2b-default-mds/pom.xml
+++ b/modules/holodeckb2b-default-mds/pom.xml
@@ -1,6 +1,6 @@
 <!--
 
-    Copyright (C) 2014 The Holodeck B2B Team, Sander Fieten
+    Copyright (C) 2024 The Holodeck B2B Team, Sander Fieten
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -27,12 +27,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>holodeckb2b-persistency</artifactId>
+    <artifactId>holodeckb2b-metadatastorage</artifactId>
     <packaging>jar</packaging>
-    <name>Holodeck B2B - Default Persistency Provider</name>
-    <inceptionYear>2017</inceptionYear>
+    <name>Holodeck B2B - Default Metadata Storage Provider</name>
+    <inceptionYear>2024</inceptionYear>
     <description>
-        This module contains the default Holodeck B2B persistency provider. It uses the Hibernate implementation
+        This module contains the default Holodeck B2B Metadata Storage Provider. It uses the Hibernate implementation
         of the JPA framework to manage the persistency of the message meta-data. The actual storage is done in an
         internal Derby database.
     </description>
