--- a/pom.xml
+++ b/pom.xml
@@ -105,8 +105,9 @@
 		<module>modules/holodeckb2b-core</module>
 		<module>modules/holodeckb2b-ebms3as4</module>
 		<module>modules/holodeckb2b-security</module>
+		<module>modules/holodeckb2b-default-mds</module>
+		<module>modules/holodeckb2b-default-psp</module>
 		<module>modules/holodeckb2b-ui</module>
-		<module>modules/holodeckb2b-persistency</module>
 		<module>modules/holodeckb2b-distribution</module>
 		<!--        <module>modules/holodeckb2b-it</module> -->
 	</modules>
@@ -141,7 +142,12 @@
 			</dependency>
 			<dependency>
 				<groupId>org.holodeckb2b</groupId>
-				<artifactId>holodeckb2b-persistency</artifactId>
+				<artifactId>holodeckb2b-metadatastorage</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.holodeckb2b</groupId>
+				<artifactId>holodeckb2b-payloadstorage</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
