--- a/modules/holodeckb2b-interfaces/pom.xml
+++ b/modules/holodeckb2b-interfaces/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>7.0.1</version>
+        <version>8.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>holodeckb2b-interfaces</artifactId>
@@ -86,6 +86,15 @@
 		<dependency>
 			<groupId>org.apache.axis2</groupId>
 			<artifactId>axis2-kernel</artifactId>
+		</dependency>
+		<!-- 
+			Although Log4j is not used by the interfaces themselves we include it as a dependency of this
+		 	project because it is the default logging framework used by Holodeck B2B and we encourage extension 
+		 	developers to also use it in their code. 
+		-->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>				
 		</dependency>
 	</dependencies>
 
