--- a/modules/holodeckb2b-security/certmanager/pom.xml
+++ b/modules/holodeckb2b-security/certmanager/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b-security</artifactId>
-        <version>7.0.1</version>
+        <version>8.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>holodeckb2b-certmanager</artifactId>
