--- a/modules/holodeckb2b-security/pom.xml
+++ b/modules/holodeckb2b-security/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>7.0.1</version>
+        <version>8.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>holodeckb2b-security</artifactId>
@@ -36,7 +36,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <wss4j.version>3.0.3</wss4j.version>
+        <wss4j.version>3.0.4</wss4j.version>
     </properties>
 
     <modules>
@@ -73,7 +73,7 @@
     					<artifactId>xmlsec</artifactId>
 					</exclusion>
 	            </exclusions>
-	        </dependency>
+	        </dependency>         
         </dependencies>		
 	</dependencyManagement>
 </project>
