--- a/modules/holodeckb2b-security/sec-provider/pom.xml
+++ b/modules/holodeckb2b-security/sec-provider/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b-security</artifactId>
-        <version>7.0.1</version>
+        <version>8.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>holodeckb2b-ebms3-secprovider</artifactId>
@@ -55,15 +55,13 @@
         <dependency>
             <groupId>org.apache.wss4j</groupId>
             <artifactId>wss4j-ws-security-dom</artifactId>
-            <version>${wss4j.version}</version>
-        </dependency>
+            <version>${wss4j.version}</version>            
+        </dependency>       
         <!-- The modified 3.0.4 version of Santuario is needed for support of the brainpol EC -->
 		<dependency>
 			<groupId>org.apache.santuario</groupId>
     		<artifactId>xmlsec</artifactId>
-    		<version>3.0.4-bp</version>	
-    		<scope>system</scope>
-    		<systemPath>${basedir}/lib/xmlsec-3.0.4-bp.jar</systemPath>
+    		<version>3.0.5</version>	
 		</dependency>
         <!-- Test dependencies -->
 	    <dependency>
