--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<groupId>org.holodeckb2b</groupId>
 	<artifactId>holodeckb2b</artifactId>
 	<packaging>pom</packaging>
-	<version>7.0.1</version>
+	<version>8.0.0-SNAPSHOT</version>
 	<name>Holodeck B2B</name>
 	<url>http://www.holodeck-b2b.org/</url>
 	<inceptionYear>2015</inceptionYear>
@@ -208,7 +208,7 @@
 			<dependency>
 				<groupId>xerces</groupId>
 				<artifactId>xercesImpl</artifactId>
-				<version>2.10.0</version>
+				<version>2.12.2</version>
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
@@ -280,7 +280,7 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-junit-jupiter</artifactId>
-				<version>2.28.2</version>
+				<version>5.14.2</version>
 				<scope>test</scope>
 			</dependency>		    
 	        <dependency>
